cert-manager-http/issuer-lets-encrypt-4/ingress-4.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${serviceName}-${environment}-ingress-4
  namespace: ${environment}-${serviceName}
  annotations:
    # We need to add the cluster issuer annotation
    cert-manager.io/cluster-issuer: ${serviceName}-${environment}-new-4
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "6000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "6000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "6000"
    # nginx.ingress.kubernetes.io/server-snippets: |
    #   location /socket {
    #     proxy_set_header Upgrade $http_upgrade;
    #     proxy_http_version 1.1;
    #     proxy_set_header X-Forwarded-Host $http_host;
    #     proxy_set_header X-Forwarded-Proto $scheme;
    #     proxy_set_header X-Forwarded-For $remote_addr;
    #     proxy_set_header Host $host;
    #     proxy_set_header Connection "upgrade";
    #     proxy_cache_bypass $http_upgrade;
    #     }
spec:
 # We need to add a tls section
  tls:
  - hosts:
    - ${httpsDomain4}
    secretName: laravel-in-kubernetes-tls-4
  ingressClassName: nginx
  rules:
  # We also need to add a host for our ingress path
  - host: ${httpsDomain4}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${serviceName}-webserver
            port:
              number: 80
